# obsidian-import

./: .coverage.Mac.pid5172.XJR6Tl2x.HNQIp837rWOh  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  known-vulnerabilities.json  mkdocs.yml  pixi.toml  pyproject.toml  release-please-config.json
.github/workflows/: auto-tag.yml  ci.yml  claude-mention.yml  code-quality.yml  dep-audit.yml  docs-deploy.yml  docs-freshness.yml  docs-update.yml  factory-orchestrator.yml  issue-implement.yml  issue-triage.yml  pr-autofix.yml  pr-code-review.yml  pr-docs-check.yml  publish.yml  release.yml  security-scan.yml  test-coverage.yml  workflow-upgrade.yml
docs/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: api.md  cli.md  exceptions.md
obsidian_import/: __init__.py  cli.py  config.py  discovery.py  exceptions.py  extraction_result.py  formatting.py  media.py  output.py  passthrough.py  registry.py  timeout.py
tests/: conftest.py  test_cli.py  test_cli_batch.py  test_cli_convert.py  test_cli_doctor.py  test_config.py  test_config_overrides.py  test_discovery.py  test_docling.py  test_docling_extract.py  test_docling_images.py  test_exceptions.py  test_formatting.py  test_init.py  test_markitdown.py  test_media.py  test_media_copy.py  test_media_process.py  test_media_validation.py  test_native_csv.py  test_native_docx.py  test_native_docx_images.py  test_native_image.py  test_native_json.py  test_native_pdf.py  test_native_pdf_extract.py  test_native_pdf_images.py  test_native_pptx.py  test_native_pptx_extract.py  test_native_pptx_tables.py  test_native_xlsx.py  test_native_yaml.py  test_output.py  test_passthrough.py  test_properties.py  test_registry.py  test_registry_isolation.py  test_size_guard.py  test_timeout.py  test_timeout_escalation.py  (+1 more)
(+14 files in other folders)
